[metadata]
name = graph-png
version = 0.0.1
description = GNNs for detecting primordial nongaussianity (PNG)

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    networkx
    pathlib
    tqdm
    xarray

    # jax backend
    jax>=0.4.2
    jraph


[options.extras_require]
dev = 
    pytest
    coverage
docs =
    sphinx>=5.0
    sphinx-rtd-theme
    sphinx_mdinclude
    myst-parser
    babel
    pyzmq>=17.1
    jinja2>=2.4  
    urllib3<2.0